test/1.2/errors/T_EAPPLY.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

extern FOO;

event e;

method test -> (bool ok)
{
    /// ERROR EAPPLY
    FOO();
    /// ERROR EAPPLY
    (FOO + 1)();
    local bool b;
    /// ERROR EAPPLY
    b();
    /// ERROR EAPPLY
    1();
    /// ERROR EAPPLY
    $e();
    /// ERROR EAPPLY
    $e() + 1;
}
